--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase": "^10.11.1",
     "firebaseui": "^6.1.0",
     "groq-sdk": "^0.3.3",
