--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.40.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.33.3",
+    "socket.io": "^4.7.5",
+    "ws": "^8.17.0"
   }
 }
