--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "path": "^0.12.7",
     "sharp": "^0.33.3",
     "socket.io": "^4.7.5",
+    "three": "^0.164.1",
+    "three-gltf-loader": "^1.111.0",
+    "three-obj-loader": "^1.1.3",
     "ws": "^8.17.0"
   }
 }
