Setup initial email sending

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "base64-img": "^1.0.4",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -29,6 +30,7 @@
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "node-record-lpcm16": "^1.0.1",
+    "nodemailer": "^6.9.13",
     "openai": "^4.40.2",
     "path": "^0.12.7",
     "sharp": "^0.33.3",
