--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^6.5.0",
+    "@google-cloud/text-to-speech": "^5.2.0",
     "axios": "^1.6.8",
     "base64-img": "^1.0.4",
     "bcrypt": "^5.1.1",
