--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^6.5.0",
+    "alert": "^6.0.1",
     "axios": "^1.6.8",
     "base64-img": "^1.0.4",
     "bcrypt": "^5.1.1",
@@ -28,9 +29,11 @@
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "node-popup": "^0.1.14",
     "node-record-lpcm16": "^1.0.1",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
+    "popups": "^1.1.3",
     "sharp": "^0.33.3",
     "socket.io": "^4.7.5",
     "three": "^0.164.1",
