--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^6.5.0",
+    "@google-cloud/text-to-speech": "^5.3.0",
     "axios": "^1.6.8",
     "base64-img": "^1.0.4",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "connect-mongo": "^5.1.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
@@ -36,6 +38,7 @@
     "three": "^0.164.1",
     "three-gltf-loader": "^1.111.0",
     "three-obj-loader": "^1.1.3",
+    "uuid": "^9.0.1",
     "ws": "^8.17.0"
   }
 }
